syntax = "proto3";

package product;

option java_multiple_files = true;
option java_package = "com.sunny.scm.grpc.product";
option java_outer_classname = "ProductCatalogProto";

// ========================= MESSAGES =========================
message Product {
  int64 id = 1;
  int64 company_id = 2;
  string product_sku = 3;
  string product_name = 4;
  string description = 5;
  int64 category_id = 6;
  string category_name = 7;
  string unit = 8;
  string status = 9;
}

message ProductPackage {
  int64 id = 1;
  int64 product_id = 2;
  string package_type = 3;
  double length = 4;
  double width = 5;
  double height = 6;
  double weight = 7;
  string barcode = 8;
  int32 quantity_in_parent = 9;
  Product product = 10;
}

// ========================= REQUEST & RESPONSE =========================
message GetProductPackagesRequest {
  repeated int64 package_ids = 1;
}

message GetProductPackagesResponse {
  repeated ProductPackage product_packages = 1;
}

// ========================= SERVICE =========================
service ProductCatalogService {
  rpc GetProductPackages(GetProductPackagesRequest) returns (GetProductPackagesResponse);
}
